fixed out of screen description glitch

--- a/src/components/PartnersSlider/PartnersSlider.scss
+++ b/src/components/PartnersSlider/PartnersSlider.scss
@@ -149,6 +149,16 @@
                         height: $small-fs;
                         padding-left: 1rem;
                     }
+
+                    @media (max-width: 450px) {
+                        flex-direction: column;
+                        gap: calc($regular-gap / 4);
+
+                        & > p {
+                            padding: 0;
+                            border: none;
+                        }
+                    }
                 }
             }
         }
